# python-project-lvl4

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py  wsgi.py
task_manager/templates/: index.html
task_manager/templates/task_manager/: base_bootstrat4.html  index.html  starter-template.css
