[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = "Task manager"
authors = ["Андрей Трушин <trand1@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"
python-dotenv = "^0.20.0"
django-bootstrap4 = "^22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
